--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1677,107 +1677,107 @@ stories:
   domain: http://www.princetoninfo.com/
   link: https://princetoninfo.com/rescue-mission-of-trenton/
 images:
-- name: supreme-court-supremecourt-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
-- name: border-crossing-bordercrossing-hot-spicy.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-hot-spicy.png
-- name: white-house-whitehouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-emily-carr.jpg
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
-- name: status-berlin-status-berlin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-blocks.jpg
-- name: old-school-house-old-schoolhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-space-pizza.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-rainbow-festival.jpg
-- name: birdhouse-birdhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
-- name: paris-paris-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
-- name: crow_colored_circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colored_circuits.jpg
-- name: yosemite-yosemite-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-light-dali.jpg
-- name: capital-battle-capitolbattle-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-hot-spicy.jpg
-- name: white-house-lawn-white-house-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-aqua.jpg
-- name: old-granary-field-granaryfield-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-monet-one.jpg
-- name: fence-fence-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-rain.jpg
-- name: supreme-court-supremecourt-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-nazi-poster.jpg
-- name: nazi-invasion-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-long-hospital.jpg
-- name: capital-battle-capitolbattle-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-space-pizza.jpg
-- name: ellis-island-ellis-island-room-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-missle.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: razorwire-DSC-0080-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-electricity.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
-- name: adam-smith-adam-smith-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
-- name: nazi-invasion-downtown-street-crosswalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-street-crosswalk.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-- name: old-barn-old-barn-1500-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-space-pizza.jpg
-- name: adam-smith-adam-smith-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
-- name: bf-skinner-abandoned-church-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-abandoned-church-far.jpg
-- name: mosaic-face-mosaic-face-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-wols.jpg
-- name: fence-mexico-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-green-zuma.jpg
-- name: walled-garden-walled-garden-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-aqua.jpg
-- name: store-on-corner-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-post-modern.jpg
-- name: blossombar-oily-mcoilface-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-50-62.jpg
-- name: oldhouse-granaryfield-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-spagetti-accident.JPG
-- name: ellis-island-ellis-island-room-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-alberto-giacometti.jpg
-- name: crow-crow-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
-- name: school-clouds-church-clouds-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-dresden.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
-- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
-- name: rain-princess-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-building-trees-sky.jpg
-- name: powerlines-power.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power.jpg
-- name: crow_dark_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_dali.jpg
-- name: nazi-invasion-stainless-tree-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stainless-tree-clouds.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-kand-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kand-two.JPG
-- name: old-barn-old-barn-1500-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-matrix.jpg
-- name: dragon-desert-desert-dragon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
+- name: aws-s3-stories-new-54-32-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-54-32-800-500-0-max-0--5--1.jpg
+- name: dragon-desert-desert-dragon-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kandinsky-bv.jpg
+- name: legal-statue-legalstatue-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-brush.jpg
+- name: braceros-domingo-ulloa-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital-records-building.jpg
+- name: downtheline-downtheline-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gan-vogh.jpg
+- name: aws-s3-stories-new-van-gogh-starry-night-container-bridge-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-van-gogh-starry-night-container-bridge-2.jpg
+- name: stalin-time-highway-granary-truck_36557728122_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-highway-granary-truck_36557728122_o.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: old-cabin-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crafty-painting.jpg
+- name: nazi-invasion-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6436.jpg
+- name: stalin-time-subway-underground_36599191851_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-subway-underground_36599191851_o.jpg
+- name: oldcabin-oldcabin-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-neo-instinct.jpg
+- name: art-museum-art-museum-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
+- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
+- name: death-valley-death-valley-national-park-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-soul.jpg
+- name: dragon-desert-desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-light-dali.jpg
+- name: window-window-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
+- name: file-00-00-40-84.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-40-84.jpg
+- name: copper-circuit-highway-granary-truck_36557728122_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-highway-granary-truck_36557728122_o.jpg
+- name: border-fence-border-fence-on-hill-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-post-modern.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+- name: capital-battle-capitolbattle-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-internet-numbers.jpg
+- name: dc-statue-dcstatue-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-dream.jpg
+- name: razorcliff-razorcliff-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-storm.jpg
+- name: oldcabin-oldcabin-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-space-pizza.jpg
+- name: hollywood-building-hollywood-building-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smooth-ride.jpg
+- name: downtown-los-angeles-downtown-la-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
+- name: border-fence-border-fence-on-hill-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kand-two.jpg
+- name: old-barn-old-barn-1500-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-brush.jpg
+- name: oldsmallboat-oldsmallboat-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-gred-mash.jpg
+- name: catacombs-catacombs-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-wols.JPG
+- name: bf-skinner-old-gas-station_36680991076_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_36680991076_o.jpg
+- name: stalin-time-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-building-trees-sky.jpg
+- name: bf-skinner-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gauge-on-aircraft-carrier.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+- name: lincoln-memorial-lincolnmemorial-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-dali.jpg
+- name: aws-s3-stories-beach-rocks-currents-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-internet-numbers.jpg
+- name: carry-load-carryload-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-spagetti-accident.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
+- name: bf-skinner-japanese-garden-tree.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-japanese-garden-tree.jpg
+- name: blossombar-crafty-painting-file-00-00-50-15.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-15.jpg
+- name: christianity-christianity-under-construction-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
+- name: bf-skinner-blechlety-old-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-blechlety-old-racks.jpg
+- name: abandonedbuildings_colorful_blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_blocks.jpg
+- name: school-clouds-church-clouds-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-green-zuma.jpg
+- name: stalin-time-construction-zone-claw.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-construction-zone-claw.jpg
+- name: amusement-park-amusement-park-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
+- name: oldtrain-oldtrain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-spagetti-accident.jpg
+- name: trucksilo-trucksilo-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-dresden.jpg
 ---
 Remembering The Skinny Of Christmas.&nbsp;Multiple Vehicle Wreck Claims Life Of Chillicothe Woman.&nbsp;What To Do With That Leftover Bubbly? Some Ideas.&nbsp;Top Stories Of The Decade.&nbsp;Harold Bryan Bud Tolley Obituary.&nbsp;Its All About The Math Breaking A Guinness World Record For A Smore.&nbsp;Hemp Could Boost Goshen County Economy.&nbsp;Ghosn In Lebanon, Says He Left Japan Because Of Injustice.&nbsp;
